--- a/src/modal/Modal.style.scss
+++ b/src/modal/Modal.style.scss
@@ -1,7 +1,7 @@
 .keys-wrapper {
   transform: none !important;
   position: fixed !important;
-  top: 100px !important;
+  top: 130px !important;
   right: 100px !important;
   left: unset !important;
 
@@ -33,13 +33,27 @@
       align-items: center;
     }
 
+    div.spacekey {
+      color: black;
+      width: 70px;
+      height: 20px;
+      border-radius: 4px;
+      position: relative;
+      background: white;
+      padding: 5px;
+      margin: 0 0 5px 5px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
     div.row {
       display: flex;
       justify-content: center;
     }
 
     p {
-      margin: 5px 0 0;
+      margin: 5px 0 10px 0;
     }
   }
   button {
